--- a/The JBB/GoogleService-Info.plist
+++ b/The JBB/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>319867194268-8tvnin85i5u6lc1hck1ih7ouctt6fmr2.apps.googleusercontent.com</string>
+	<string>319867194268-93ukoled021egsigr6rvv659t4cbvm4g.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.319867194268-8tvnin85i5u6lc1hck1ih7ouctt6fmr2</string>
+	<string>com.googleusercontent.apps.319867194268-93ukoled021egsigr6rvv659t4cbvm4g</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCGvkYxzcvtYPOtoNE-v3eNaXGyTu-5Z6U</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.BobbyKeffury.JBB</string>
+	<string>com.BobbyKeffury.TheJBB</string>
 	<key>PROJECT_ID</key>
 	<string>the-juco-baseball-blog-66981</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,8 +29,10 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:319867194268:ios:1e328ed689bff0af2d5659</string>
+	<string>1:319867194268:ios:82b1b5974d96b4c82d5659</string>
 	<key>DATABASE_URL</key>
 	<string>https://the-juco-baseball-blog-66981-default-rtdb.firebaseio.com</string>
+	<key>ADMOB_APP_ID</key>
+	<string>ca-app-pub-9585815002804979~7394328578</string>
 </dict>
 </plist>
